# recruiter-ats

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt  test.py
backend/app/: __init__.py  main.py
backend/app/api/routes/: auth.py  candidates.py  health.py  jobs.py
backend/app/core/: config.py  database.py  dependencies.py  jwt.py  security.py
backend/app/models/: __init__.py  candidate.py  job.py  recruiter.py
backend/app/prompts/: fit_scoring.py  resume_parser.py
backend/app/schemas/: candidate.py  fit_analysis.py  fit_score.py  job.py  resume_parser.py
backend/app/services/: candidate_service.py  job_service.py
backend/app/services/ai/: fit_score_service.py  openai_client.py  resume_parser_service.py
backend/app/utils/: pdf_parser.py
backend/migrations/: env.py
backend/migrations/versions/: 0399f4a433bc_initial_schema.py  20260627_add_fit_analysis.py  20260627_add_fit_score_fields_cols.py  20260627_add_fit_score_json.py  20260627_add_parsed_resume.py  20260627_candidate_final.py
backend/tests/: test_ai_pipeline.py
backend/uploads/: .gitkeep
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: ErrorBoundary.tsx  JobCandidatesPanel.tsx  ProtectedRoute.tsx  Toast.tsx
frontend/src/context/: AuthContext.tsx  index.ts
frontend/src/hooks/: index.ts
frontend/src/layouts/: AuthLayout.tsx  Layout.tsx
(+28 files in other folders)
